# scenariolens

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: architecture.md  cli_workflows.md  data_format.md  data_provenance.md  data_strategy.md  framework_concepts.md  github_metadata.md  hardware_strategy.md  index.html  ingestion.md  outreach_v0.2.0.md  project_brief.md  project_strategy.md  recruiting_packet.md  release_checklist_v0.2.0.md  release_checklist_v1.0.0.md  roadmap.md  scenario_taxonomy.md  tech_stack.md  v1_acceptance.md  waymo_motion_slice_recipe.md
scripts/: check_links.py
tests/: test_baseline_compare_study.py  test_baseline_debug.py  test_cli.py  test_context_eval_set.py  test_context_failure_study.py  test_context_study.py  test_dashboard.py  test_evidence_index.py  test_explorer.py  test_failure_stability.py  test_failure_study.py  test_heading_replay_prototype.py  test_ingest_csv_tracks.py  test_ingest_waymo_motion.py  test_io.py  test_lane_continuation.py  test_lane_continuation_branch_coverage.py  test_lane_continuation_branch_replay.py  test_lane_continuation_branch_rollout.py  test_lane_continuation_branch_selection.py  test_lane_continuation_candidates.py  test_lane_continuation_diagnostics.py  test_lane_continuation_replay.py  test_lane_continuation_route_context_guard.py  test_lane_continuation_route_context_guard_calibration.py  test_lane_continuation_terminal_neighborhood_audit.py  test_lane_continuation_terminal_neighborhood_casebook.py  test_lane_continuation_terminal_neighborhood_replay.py  test_lane_continuation_terminal_neighborhood_selector.py  test_lane_continuation_terminal_neighborhood_selector_calibration.py  test_lane_continuation_terminal_neighborhood_selector_candidate_validation.py  test_lane_continuation_terminal_neighborhood_selector_decision_atlas.py  test_lane_continuation_terminal_neighborhood_selector_error_audit.py  test_lane_continuation_terminal_neighborhood_selector_transfer.py  (+23 more)
(+150 files in other folders)
