[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scenariolens"
version = "0.1.0"
description = "Long-tail autonomous-driving scenario discovery and evaluation tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ethan Villalovoz" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
scenariolens = "scenariolens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

