[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scenariolens"
version = "0.2.0"
description = "Long-tail autonomous-driving scenario discovery and evaluation tooling."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Ethan Villalovoz" }
]
dependencies = []
keywords = [
  "autonomous-driving",
  "waymo-open-dataset",
  "motion-forecasting",
  "scenario-mining",
  "safety-evaluation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://ethanvillalovoz.com/scenariolens/"
Repository = "https://github.com/ethanvillalovoz/scenariolens"
Documentation = "https://github.com/ethanvillalovoz/scenariolens/tree/main/docs"
Issues = "https://github.com/ethanvillalovoz/scenariolens/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
scenariolens = "scenariolens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scenariolens = ["data/*.json"]

[tool.setuptools.data-files]
"share/scenariolens/explorer" = [
  "docs/demo/index.html",
  "docs/demo/app.js",
  "docs/demo/styles.css",
]
